// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraud protection rule toggle tests renders correctly when disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

<body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="fraud-protection-rule-toggle"
      >
        <div
          class="components-base-control components-toggle-control emotion-0 emotion-1"
        >
          <div
            class="components-base-control__field emotion-2 emotion-3"
          >
            <div
              class="components-flex components-h-stack emotion-4 emotion-5"
              data-wp-c16t="true"
              data-wp-component="HStack"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  aria-describedby="inspector-toggle-control-0__help"
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-0"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
                data-wp-c16t="true"
                data-wp-component="FlexBlock"
                for="inspector-toggle-control-0"
              >
                Test rule toggle
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help emotion-8 emotion-9"
            id="inspector-toggle-control-0__help"
          >
            <span
              class="components-toggle-control__help"
            >
              Test rule toggle description
            </span>
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

<div>
    <div
      class="fraud-protection-rule-toggle"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-0__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-0"
            >
              Test rule toggle
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help emotion-8 emotion-9"
          id="inspector-toggle-control-0__help"
        >
          <span
            class="components-toggle-control__help"
          >
            Test rule toggle description
          </span>
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Fraud protection rule toggle tests renders correctly when enabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

<body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="fraud-protection-rule-toggle"
      >
        <div
          class="components-base-control components-toggle-control emotion-0 emotion-1"
        >
          <div
            class="components-base-control__field emotion-2 emotion-3"
          >
            <div
              class="components-flex components-h-stack emotion-4 emotion-5"
              data-wp-c16t="true"
              data-wp-component="HStack"
            >
              <span
                class="components-form-toggle is-checked"
              >
                <input
                  aria-describedby="inspector-toggle-control-1__help"
                  checked=""
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-1"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
                data-wp-c16t="true"
                data-wp-component="FlexBlock"
                for="inspector-toggle-control-1"
              >
                Test rule toggle
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help emotion-8 emotion-9"
            id="inspector-toggle-control-1__help"
          >
            <span
              class="components-toggle-control__help"
            >
              Test rule toggle description
            </span>
          </p>
        </div>
      </div>
      test content
    </div>
  </body>,
  "container": .emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

<div>
    <div
      class="fraud-protection-rule-toggle"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                aria-describedby="inspector-toggle-control-1__help"
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-1"
            >
              Test rule toggle
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help emotion-8 emotion-9"
          id="inspector-toggle-control-1__help"
        >
          <span
            class="components-toggle-control__help"
          >
            Test rule toggle description
          </span>
        </p>
      </div>
    </div>
    test content
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Fraud protection rule toggle tests renders correctly when enabled and blocked 1`] = `
{
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

<body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="fraud-protection-rule-toggle"
      >
        <div
          class="components-base-control components-toggle-control emotion-0 emotion-1"
        >
          <div
            class="components-base-control__field emotion-2 emotion-3"
          >
            <div
              class="components-flex components-h-stack emotion-4 emotion-5"
              data-wp-c16t="true"
              data-wp-component="HStack"
            >
              <span
                class="components-form-toggle is-checked"
              >
                <input
                  aria-describedby="inspector-toggle-control-2__help"
                  checked=""
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-2"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
                data-wp-c16t="true"
                data-wp-component="FlexBlock"
                for="inspector-toggle-control-2"
              >
                Test rule toggle
              </label>
            </div>
          </div>
          <p
            class="components-base-control__help emotion-8 emotion-9"
            id="inspector-toggle-control-2__help"
          >
            <span
              class="components-toggle-control__help"
            >
              Test rule toggle description
            </span>
          </p>
        </div>
      </div>
      test content
    </div>
  </body>,
  "container": .emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

<div>
    <div
      class="fraud-protection-rule-toggle"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                aria-describedby="inspector-toggle-control-2__help"
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-2"
            >
              Test rule toggle
            </label>
          </div>
        </div>
        <p
          class="components-base-control__help emotion-8 emotion-9"
          id="inspector-toggle-control-2__help"
        >
          <span
            class="components-toggle-control__help"
          >
            Test rule toggle description
          </span>
        </p>
      </div>
    </div>
    test content
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
